--- a/app/index.html
+++ b/app/index.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="./styles/index.scss" />
   </head>
   <body>
-    <audio audio-player></audio>
+    <audio js-audio-player></audio>
     <div class="container">
       <div class="keyboard">
         <div class="keyboard__left">
-          <div class="keyboard__screen"></div>
+          <div class="keyboard__screen">
+            <div class="controls" js-controls>
+              <span class="current-time" js-current-time>0:00</span>
+              <div class="slider" data-direction="horizontal" js-slider>
+                <div class="progress" js-progress>
+                  <div class="pin" id="progress-pin" data-method="rewind"></div>
+                </div>
+              </div>
+              <span class="total-time" js-total-time>0:00</span>
+            </div>
+          </div>
           <div class="keyboard__pads">
-            <div class="keyboard__pads__row" pads-row></div>
+            <div class="keyboard__pads__row" js-pads-row></div>
           </div>
         </div>
-        <div class="keyboard__right">
+        <!-- <div class="keyboard__right">
           <div class="keyboard__controls"></div>
-        </div>
+        </div> -->
       </div>
     </div>
     <script src="./scripts/index.ts" type="module"></script>
